--- a/main.html
+++ b/main.html
@@ -3,6 +3,13 @@
   <body>
     <script type="text/javascript" src="./script.js">
 </script>
+	  <h3 id="url">https://localhost:8080/</h3>
+	  <form>
+		  <input type="text" id="name" name="name" >
+	  <input type="number" id="year" name="year" >
+	  <button type="submit" id="button">Submit</button>
+	  </form>
+	  
   </body>
 
 </html>
