--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	  <h3 id="url">https://localhost:8080/</h3>
-	  <form>
+	  <form id="form">
 		  <input type="text" id="name" name="name" >
 	  <input type="number" id="year" name="year" >
 	  <button type="submit" id="button">Submit</button>
