--- a/main.html
+++ b/main.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <script type="text/javascript" src="./script.js">
-</script>
+    
 	  <h3 id="url">https://localhost:8080/</h3>
 	  <form id="form">
 		  <input type="text" id="name" name="name" >
 	  <input type="number" id="year" name="year" >
-	  <button type="submit" id="button">Submit</button>
+	  <button id="button">Submit</button>
 	  </form>
 	  
+	  <script type="text/javascript" src="./script.js">
+</script>
   </body>
 
 </html>
